2025-09-09  Zhengyi Fu  <i@fuzy.me>

	* init.el (completion-pcm-leading-wildcard): Set to t.

	This is a new option in Emacs 31.

2025-09-09  Zhengyi Fu  <i@fuzy.me>

	Refactor gptel-config tool functions for better maintainability.

	* site-lisp/gptel-config.el (+gptel-read-file)
	(+gptel-list-directory, +gptel-create-file)
	(+gptel-editor-diagnostics, +gptel-echo-message)
	(+gptel-web-search, +gptel-get-pullreq, +gptel-shellcheck): New
	functions extracted from lambda expressions.
	(+gptel-string-replace-async): Add detailed documentation
	including error conditions. Improve error handling to show line
	numbers of duplicate occurrences.
	(+gptel-run-command-async): Enhance output formatting to exclude
	header and footer lines.  Extract all lambda functions into named
	functions with proper docstrings for better code organization and
	maintainability.

2025-09-11  Zhengyi Fu  <i@fuzy.me>

	Improve gptel agent documentation and formatting consistency.

	* site-lisp/gptel-config.el: Simplify tool descriptions by removing
	redundant "full" from path parameter descriptions. Fix numbering
	inconsistency in commit analysis section. Improve code formatting
	consistency in preset definition. Remove redundant project root
	message insertion in agent startup.


2025-09-09  Zhengyi Fu  <i@fuzy.me>

	Configure pcap-mode for .pcapng files with line highlighting.

	* init.el: Add auto-mode association for .pcapng files to use pcap-mode
	and enable hl-line-mode in pcap-mode for better visibility.

2025-09-09  Zhengyi Fu  <i@fuzy.me>

	Refactor gptel file editing tools for better reliability and user experience.

	* site-lisp/gptel-config.el: Replace complex edit_file tool with simpler
	str_replace and insert tools.
	(+gptel-edit-file-async): Remove complex edit function.
	(+gptel-string-replace-async): New function for simple string replacement.
	(+gptel-insert-async): New function for inserting text at specific line.